[project]
name = "gene-association"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "spmf>=1.4",
]

[tool.uv.workspace]
members = [
    "test",
]
